force-app/main/default/objects/FINS_Investment__c/fields/FINS_Private_Equity_Amount__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>