force-app/main/default/objects/FINS_Investment__c/fields/FINS_Private_Equity_Fund__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Fund__c</fullName>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>