force-app/main/default/objects/FINS_Investment__c/fields/FINS_Private_Equity_Investor__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investments Made</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>