force-app/main/default/objects/FINS_Investment__c/fields/Investment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Investment_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Investments Made On Deal</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>